feat: implement search + create + findById